# product-page-generator

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
data/: sample_products.csv
src/: main.py
tests/: test_core.py
